ansible/roles/rke/files/05_illume-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: illume
  labels:
    name: illume
