ansible/roles/rke/files/12_rook-cluster.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rook
