ansible/roles/rke/files/06_allow-namespace-illume.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-namespace-illume
  namespace: illume
spec:
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: illume
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            name: illume
